- https://github.com/eclipse-syson/syson/issues/703[#703] [services] Fix an issue where it was impossible anymore to set the cardinality of an `Element` as graphical node through direct edit.
- https://github.com/eclipse-syson/syson/issues/705[#705] [services] Fix ConjugatedPortDefinition label.

=== Improvements

- https://github.com/eclipse-syson/syson/issues/538[#538] [general-view] Add actions in _PartUsage_ and _PartDefinition_
- https://github.com/eclipse-syson/syson/issues/554[#554] [general-view] Add states in _PartUsage_ and _PartDefinition_
- https://github.com/eclipse-syson/syson/issues/393[#393] [general-view] Add _ExhibitStates_ on General View diagram
- https://github.com/eclipse-syson/syson/issues/557[#557] [state-transition-view] Allow the creation of a StateTransitionView diagram on a _PartUsage_/_PartDefinition_
- https://github.com/eclipse-syson/syson/issues/558[#558] [state-transition-view] Allow the creation of a StateTransitionView diagram on a _StateUsage_/_StateDefinition_
- https://github.com/eclipse-syson/syson/issues/568[#568] [interconnection-view] Simplify Interconnection View implementation and remove duplicated code
- https://github.com/eclipse-syson/syson/issues/571[#571] [interconnection-view] Add ActionUsage node in Interconnection View
- https://github.com/eclipse-syson/syson/issues/581[#581] [interconnection-view] Add documentation and action flow compartment in ActionUsage
- https://github.com/eclipse-syson/syson/issues/590[#590] [diagrams] Add label support for referential Usages
- https://github.com/eclipse-syson/syson/issues/599[#599] [diagrams] Add support for ref keyword in direct edit
- https://github.com/eclipse-syson/syson/issues/602[#602] [diagrams] Use empty diamond source style for nested reference usage edge
- https://github.com/eclipse-syson/syson/issues/604[#604] [diagrams] Modify the creation of an _ExhibitState_ from a _StateUsage_ or _StateDefinition_.
There is now several tools for creating an _ExhibitState_.